--- a/src/components/ModalModule/Modal.style.scss
+++ b/src/components/ModalModule/Modal.style.scss
@@ -11,19 +11,33 @@
   justify-content: center;
   align-items: center;
   .modal {
+    position: relative;
     border-radius: 4px;
     background-color: $white-background-color;
     padding: 15px;
-    width: 650px;
-    min-height: 300px;
+    width: 400px;
+    height: auto;
     .modal-title {
       font-weight: 600;
-      font-size: 24px;
+      font-size: 30px;
       color: $black-font-color;
       margin-bottom: 10px;
+      text-align: center;
+      margin: 10px 0px 20px 0px;
     }
     .modal-body {
 
+    }
+    .close {
+      color: $dark-grey-color;
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      text-align: center;
     }
   }
 }
