--- a/src/components/SelectModule/Select.style.scss
+++ b/src/components/SelectModule/Select.style.scss
@@ -3,7 +3,7 @@
 .select {
 	display: flex;
 	flex-direction: column;
-	min-height: 230px;
+	min-height: 210px;
 	height: auto;
 	.selected	{
 		border: 2px solid $primary-color;
@@ -30,7 +30,6 @@
 				min-width: 22px;
 				padding: 3px 6px;
 				margin-left: 10px;
-				margin-right: -5px;
 				border-radius: 4px;
 				color: $white-font-color;
 				background-color: $dark-grey-color;
@@ -51,18 +50,37 @@
 	}
 	.options {
 		padding: 10px 0px;
-		border: 1px solid red;
 		.option {
-			display: block;
+			cursor: pointer;
+			display: inline-block;
+			text-align: center;
+			min-width: 30px;
+			padding: 5px 10px;
+			margin-bottom: 3px;
+			border-radius: 4px;
+			color: $white-font-color;
+			background-color: $grey-color;
+			font-size: 16px;
+		}
+		.nested-options {
+			padding-left: 15px;
 			.nested-option {
-				display: block;
-				margin-left: 10px;
+				cursor: pointer;
+				display: inline-block;
+				text-align: center;
+				min-width: 22px;
+				padding: 3px 6px;
+				margin-bottom: 3px;
+				border-radius: 4px;
+				color: $white-font-color;
+				background-color: $dark-grey-color;
+				font-size: 14px;
 			}
 		}
 	}
 	.search-input {
-		margin-top: auto;
 		input {
+			background-color: transparent;
 			border: 2px solid $grey-color;
 			border-radius: 4px;
 			padding: 5px 10px;
@@ -74,5 +92,13 @@
 				outline: none;
 			}
 		}
+	}
+	.empty {
+		height: 60px;
+		text-align: center;
+		line-height: 60px;
+		font-size: 32px;
+		font-weight: 600px;
+		color: $light-grey-color;
 	}
 }
