--- a/src/views/ContentModule/Content.style.scss
+++ b/src/views/ContentModule/Content.style.scss
@@ -1,5 +1,16 @@
+@import "@/assets/_variables.scss";
+
 .content {
 	margin: 50px auto;
 	max-width: 800px;
 	padding: 20px;
+	.list-container {
+	padding: 10px 0px;
+		.list-title {
+			font-weight: 600;
+			font-size: 20px;
+			color: $black-font-color;
+			margin-bottom: 10px;
+		}
+	}
 }
