--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -7,9 +7,29 @@ body {
 
 .modal-fade-enter-active,
 .modal-fade-leave-active {
-  transition: opacity .2s;
+	transition: opacity .2s;
 }
 .modal-fade-enter,
 .modal-fade-leave-to {
-  opacity: 0;
+	opacity: 0;
+}
+
+.save-selected, .new-select {
+	display: block;
+	cursor: pointer;
+	width: 100%;
+  border: none;
+	text-align: center;
+	min-width: 30px;
+	padding: 10px;
+	margin-top: 20px;
+	border-radius: 4px;
+	color: $white-font-color;
+	background-color: $primary-color;
+	font-size: 16px;
+}
+
+.new-select {
+	width: 90px;
+	margin: 10px auto;
 }
