--- a/src/components/SelectModule/Select.style.scss
+++ b/src/components/SelectModule/Select.style.scss
@@ -3,16 +3,42 @@
 .select {
 	display: flex;
 	flex-direction: column;
-	min-height: 210px;
-	height: auto;
+	user-select: none;
+	position: relative;
+	&.nested {
+		display: inline-block;
+		width: 50%;
+		margin: 5px;
+	}
 	.selected	{
 		border: 2px solid $primary-color;
 		border-radius: 4px;
-		padding: 10px 10px 5px 10px;
+		padding: 10px 20px 5px 10px;
 		cursor: pointer;
 		min-height: 50px;
 		box-sizing: border-box;
-		margin-bottom: 10px;
+		// margin-bottom: 10px;
+		position: relative;
+		&.empty-select {
+			&:after {
+				line-height: 28px;
+				color: $grey-font-color;
+				content: 'Select items';
+				height: 30px;
+				display: inline-block;
+			}
+		}
+		.dropdown-toggle {
+			position: absolute;
+	    display: flex;
+	    width: 28px;
+	    align-items: center;
+	    height: 100%;
+	    justify-content: center;
+	    right: 0px;
+	    top: 0px;
+	    color: $primary-color;
+		}
 		.selected-option {
 			display: inline-block;
 			text-align: center;
@@ -24,19 +50,19 @@
 			color: $white-font-color;
 			background-color: $grey-color;
 			font-size: 16px;
-			.nested-selected-option {
-				display: inline-block;
-				text-align: center;
-				min-width: 22px;
-				padding: 3px 6px;
-				margin-left: 10px;
-				border-radius: 4px;
-				color: $white-font-color;
-				background-color: $dark-grey-color;
-				font-size: 14px;
-			}
+			// .nested-selected-option {
+			// 	display: inline-block;
+			// 	text-align: center;
+			// 	min-width: 22px;
+			// 	padding: 3px 6px;
+			// 	margin-left: 10px;
+			// 	border-radius: 4px;
+			// 	color: $white-font-color;
+			// 	background-color: $dark-grey-color;
+			// 	font-size: 14px;
+			// }
 		}
-		.add-input {
+		.select-input {
 			padding: 5px 0px;
 			display: block;
 			width: 100%;
@@ -49,67 +75,76 @@
 		}
 	}
 	.options {
-		padding: 10px 0px;
-		.option {
+		padding: 10px 0px 0px 0px;
+		box-shadow: $block-shadow;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+		max-height: 144px;
+    overflow-y: auto;
+    position: absolute;
+    width: 100%;
+    z-index: 9999;
+		// bottom: -154px;
+		background-color: $white-background-color;
+    &.custom {
+    	padding-bottom: 56px;
+    }
+		li {
+			&:hover {
+				background-color: $grey-color;
+			}
+			.option {
+				cursor: pointer;
+				display: block;
+				min-width: 30px;
+				padding: 10px;
+				border-radius: 4px;
+				font-size: 16px;
+			}
+			.nested-options {
+			// 	padding-left: 15px;
+			// 	.nested-option {
+			// 		cursor: pointer;
+			// 		display: inline-block;
+			// 		text-align: center;
+			// 		min-width: 22px;
+			// 		padding: 3px 6px;
+			// 		margin-bottom: 3px;
+			// 		border-radius: 4px;
+			// 		color: $white-font-color;
+			// 		background-color: $dark-grey-color;
+			// 		font-size: 14px;
+			// 	}
+			}
+		}
+		.add-new {
+			width: 80px;
 			cursor: pointer;
-			display: inline-block;
 			text-align: center;
-			min-width: 30px;
-			padding: 5px 10px;
-			margin-bottom: 3px;
+			padding: 10px;
+			margin: 10px auto;
 			border-radius: 4px;
 			color: $white-font-color;
-			background-color: $grey-color;
+			background-color: $primary-color;
 			font-size: 16px;
-		}
-		.nested-options {
-			padding-left: 15px;
-			.nested-option {
-				cursor: pointer;
-				display: inline-block;
-				text-align: center;
-				min-width: 22px;
-				padding: 3px 6px;
-				margin-bottom: 3px;
-				border-radius: 4px;
-				color: $white-font-color;
-				background-color: $dark-grey-color;
-				font-size: 14px;
+			&:hover {
+				background-color: $primary-color;
 			}
 		}
 	}
-	.search-input {
-		input {
-			background-color: transparent;
-			border: 2px solid $grey-color;
-			border-radius: 4px;
-			padding: 5px 10px;
-			height: 34px;
-			box-sizing: border-box;
-			width: 100%;
-			font-size: 16px;
-			&:focus {
-				outline: none;
-			}
-		}
-	}
-	.empty {
-		height: 60px;
-		text-align: center;
-		line-height: 60px;
-		font-size: 32px;
-		font-weight: 600px;
-		color: $light-grey-color;
-	}
-	.create-new {
-		cursor: pointer;
-		text-align: center;
-		min-width: 30px;
-		padding: 10px;
-		margin-top: 5px;
-		border-radius: 4px;
-		color: $white-font-color;
-		background-color: $primary-color;
-		font-size: 16px;
-	}
+	// .search-input {
+	// 	input {
+	// 		background-color: transparent;
+	// 		border: 2px solid $grey-color;
+	// 		border-radius: 4px;
+	// 		padding: 5px 10px;
+	// 		height: 34px;
+	// 		box-sizing: border-box;
+	// 		width: 100%;
+	// 		font-size: 16px;
+	// 		&:focus {
+	// 			outline: none;
+	// 		}
+	// 	}
+	// }
 }
